Bug 278240 - Removed comics visible as installed
Summary: Removed comics visible as installed
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-comic (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matthias Fuchs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-22 06:21 UTC by karaluh
Modified: 2011-07-27 11:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2011-07-22 06:21:54 UTC
Version:           unspecified
OS:                Linux

As in summary.

Reproducible: Always

Steps to Reproduce:
1 Install a comic,
2 enable it
3 remove it

Actual Results:  
Comic still visible in settings and plasmoid

Expected Results:  
Comic actualy removed
Comment 1 Matthias Fuchs 2011-07-24 10:19:25 UTC
Which version of KDE did you use?
Comment 2 karaluh 2011-07-25 07:32:47 UTC
4.6.5
Comment 3 Matthias Fuchs 2011-07-27 11:20:27 UTC
Git commit 353fafdf34908f8cfa169e7bad88a8467d258567 by Matthias Fuchs.
Committed on 27/07/2011 at 12:55.
Pushed by mfuchs into branch '4.7'.

Fixes removing of comic plugins.

* The comic dataengine connects to KSycoca to update the comic plugins it also uses removeAllData now.
* The configwidget of the comic applet uses dataUpdated to be notified of changes of the installed comic plugins.

BUG:278240
(cherry picked from commit 94b51d0cc06568c6644d5511c17c605e450b2035)

M  +1    -0    dataengines/comic/comic.h
M  +23   -12   dataengines/comic/comic.cpp
M  +4    -1    applets/comic/configwidget.h
M  +7    -7    applets/comic/configwidget.cpp

http://commits.kde.org/kdeplasma-addons/353fafdf34908f8cfa169e7bad88a8467d258567