Fixes removing of comic plugins.

* The comic dataengine connects to KSycoca to update the comic plugins it also uses removeAllData now.
* The configwidget of the comic applet uses dataUpdated to be notified of changes of the installed comic plugins.

BUG:278240
(cherry picked from commit 94b51d0cc06568c6644d5511c17c605e450b2035)